app.css
* {
    box-sizing: border-box;
    outline: none;
}

:root {
    --bg-color: #f5f8ff;
    --main-color: #353536;
    --secondary-color: #8e92a4;
    --main-text-color: #5d606b;
    --secondary-dark-color: #9496a5;
    --tag-color-one: #e0fbf6;
    --tag-color-text-one: #58c2a9;
    --tag-color-two: #ece7fe;
    --tag-color-text-two: #8972f3;
    --tag-color-three: #fde7ea;
    --tag-color-text-three: #e77f89;
    --tag-color-four: #f7f8fc;
    --tag-color-text-four: #a0a6b5;
    --checkbox-color: #009e90;
    --button-color: #49beb7;
    --box-color: #fff1d6;
    --box-color-2: #d3e6ff;
    --box-color-3: #ffd9d9;
    --box-color-4: #daffe5;
    --task-color: #777982;
}

body,
.item,
.top-part,
.top-part .count {
    display: flex;
    align-items: center;
}

body {
    margin: 0;
    overflow: auto;
    width: 100%;
    font-family: sans-serif;
    font-size: 12px;
}

ul {
    list-style-type: none;
    padding: 0;
}

button {
    border: none;
    background: none;
    cursor: pointer;
}

.list-manager {
    display: flex;
    justify-content: space-between;
    width: 100%;
    background: #fff;
    border-radius: 4px;
    box-shadow: 0 0.3px 2.2px rgba(0, 0, 0, 0.011), 0 0.7px 5.3px rgba(0, 0, 0, 0.016), 0 1.3px 10px rgba(0, 0, 0, 0.02), 0 2.2px 17.9px rgba(0, 0, 0, 0.024), 0 4.2px 33.4px rgba(0, 0, 0, 0.029), 0 10px 80px rgba(0, 0, 0, 0.04);
}

.left-bar {
    background-color: var(--bg-color);
    width: 230px;
    border-right: 1px solid #e3e7f7;
    position: relative;
    padding-bottom: 100px;
}

.left-content {
    padding: 20px 0;
}

.left-content h1 {
    margin: 0 15px;
}

.left-content h1 a {
    text-decoration: none;
    color: #444;
}

.item {
    color: var(--main-color);
    font-weight: 500;
}

.item svg {
    width: 14px;
    height: 14px;
    color: currentcolor;
    margin-right: 10px;
}

.action-list .item a,
.category-list .item a {
    color: #444;
    text-decoration: none;
    padding: 5px 20px;
    width: 100%;
}

.action-list .item:hover,
.action-list .item:active,
.action-list .item:focus,
.action-list .item.active,
.category-list .item:hover,
.category-list .item:active,
.category-list .item:focus,
.category-list .item.active {
    background-color: #74b9ff;
}

.action-list .item a::before  {
    display: inline-block;
    content: "";
    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='20' height='24' stroke='none'><path d='M6,2A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2H6M6,4H13V9H18V20H6V4M8,12V14H16V12H8M8,16V18H13V16H8Z'></path></svg>") no-repeat;
    background-size: 15px 18px;
    height: 20px;
    width: 20px;
    margin-bottom: -5px;
}

.category-list .item #settings::before {
    display: inline-block;
    content: "";
    background: url('data:image/svg+xml;utf8,<svg  xmlns="http://www.w3.org/2000/svg" width="20" height="24"><path d="M12,8A4,4 0 0,1 16,12A4,4 0 0,1 12,16A4,4 0 0,1 8,12A4,4 0 0,1 12,8M12,10A2,2 0 0,0 10,12A2,2 0 0,0 12,14A2,2 0 0,0 14,12A2,2 0 0,0 12,10M10,22C9.75,22 9.54,21.82 9.5,21.58L9.13,18.93C8.5,18.68 7.96,18.34 7.44,17.94L4.95,18.95C4.73,19.03 4.46,18.95 4.34,18.73L2.34,15.27C2.21,15.05 2.27,14.78 2.46,14.63L4.57,12.97L4.5,12L4.57,11L2.46,9.37C2.27,9.22 2.21,8.95 2.34,8.73L4.34,5.27C4.46,5.05 4.73,4.96 4.95,5.05L7.44,6.05C7.96,5.66 8.5,5.32 9.13,5.07L9.5,2.42C9.54,2.18 9.75,2 10,2H14C14.25,2 14.46,2.18 14.5,2.42L14.87,5.07C15.5,5.32 16.04,5.66 16.56,6.05L19.05,5.05C19.27,4.96 19.54,5.05 19.66,5.27L21.66,8.73C21.79,8.95 21.73,9.22 21.54,9.37L19.43,11L19.5,12L19.43,13L21.54,14.63C21.73,14.78 21.79,15.05 21.66,15.27L19.66,18.73C19.54,18.95 19.27,19.04 19.05,18.95L16.56,17.95C16.04,18.34 15.5,18.68 14.87,18.93L14.5,21.58C14.46,21.82 14.25,22 14,22H10M11.25,4L10.88,6.61C9.68,6.86 8.62,7.5 7.85,8.39L5.44,7.35L4.69,8.65L6.8,10.2C6.4,11.37 6.4,12.64 6.8,13.8L4.68,15.36L5.43,16.66L7.86,15.62C8.63,16.5 9.68,17.14 10.87,17.38L11.24,20H12.76L13.13,17.39C14.32,17.14 15.37,16.5 16.14,15.62L18.57,16.66L19.32,15.36L17.2,13.81C17.6,12.64 17.6,11.37 17.2,10.2L19.31,8.65L18.56,7.35L16.15,8.39C15.38,7.5 14.32,6.86 13.12,6.62L12.75,4H11.25Z"></path></svg>') no-repeat;
    background-size: 15px 18px;
    height: 20px;
    width: 20px;
    margin-bottom: -5px;
}

.category-list {
    margin-top: 50px;
}

.category-list .item {
    color: var(--secondary-color);
}

.actions {
    padding: 12px;
    display: flex;
    justify-content: end;
}

.circle-2 {
    border-radius: 50%;
    width: 4px;
    height: 4px;
    background-color: #d5d7e3;
    box-shadow: -6px 0 0 0 #d5d7e3, 6px 0 0 0 #d5d7e3;
}

.top-part {
    padding: 30px;
    align-self: flex-end;
}

.top-part svg {
    width: 14px;
    height: 14px;
    color: var(--main-color);
    margin-right: 14px;
}

.top-part .count {
    font-size: 12px;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    background-color: #623ce8;
    color: #fff;
    justify-content: center;
}

.right-content {
    padding: 10px 40px;
    overflow-y: auto;
    flex: 1;
}

.task-box {
    position: relative;
    border-radius: 12px;
    width: 100%;
    margin: 20px 0;
    padding: 16px;
    cursor: pointer;
    box-shadow: 2px 2px 4px 0px #ebebeb;
}

.task-box:hover {
    transform: scale(1.02);
}

.time {
    margin-bottom: 6px;
    opacity: 0.4;
    font-size: 10px;
}

.task-name {
    font-size: 14px;
    font-weight: 500;
    opacity: 0.6;
}

.yellow {
    background-color: var(--box-color);
}

.blue {
    background-color: var(--box-color-2);
}

.red {
    background-color: var(--box-color-3);
}

.green {
    background-color: var(--box-color-4);
}

.more-button {
    position: absolute;
    width: 3px;
    height: 3px;
    border-radius: 50%;
    background-color: #8e92a4;
    box-shadow: 0 -4px 0 0 #8e92a4, 0 4px 0 0 #8e92a4;
    opacity: 0.4;
    right: 20px;
    top: 30px;
    cursor: pointer;
}

.page-content {
    display: flex;
    flex-direction: column;
    flex: 1;
    padding: 15px 20px 0 20px;
}

.page-content .header {
    font-size: 26px;
    color: var(--main-color);
    margin-top: 30px;
}

.content-categories {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
    border-bottom: 1px solid #ddd;
    padding: 20px 0;
}

.outline-content {
    margin-bottom: 100px;
}

.nav-item {
    display: none;
}

.category {
    font-weight: 500;
    color: var(--secondary-color);
    border-bottom: 1px solid #ddd;
    transition: 0.4s ease-in;
    padding: 20px 30px;
    cursor: pointer;
}

#opt-1:checked+label,
#opt-2:checked+label,
#opt-3:checked+label,
#opt-4:checked+label {
    color: var(--checkbox-color);
    border-bottom: 2px solid var(--checkbox-color);
}

.task-item {
    display: none;
}

.tasks-wrapper {
    padding: 30px 0;
    flex: 1;
    overflow-y: auto;
    height: 100%;
    padding-right: 8px;
}

.task {
    display: flex;
    justify-content: space-between;
    position: relative;
    margin-bottom: 16px;
    padding-left: 30px;
    color: var(--task-color);
    font-size: 13px;
    font-weight: 500;
}

.task:hover {
    transform: translatex(2px);
}

.task label {
    cursor: pointer;
}

label .label-text {
    position: relative;
}

label .label-text:before {
    content: "";
    position: absolute;
    width: 14px;
    height: 14px;
    border: 1px solid #ddd;
    border-radius: 2px;
    left: -24px;
    transition: 0.2s ease;
}

.task-item:checked+label .label-text:before {
    background-color: var(--checkbox-color);
    border: none;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3E%3Cpolyline points='20 6 9 17 4 12'/%3E%3C/svg%3E");
    background-repeat: no-repeat;
    background-size: 10px;
    background-position: center;
    border: 1px solid var(--checkbox-color);
}

.tag {
    font-size: 10px;
    padding: 4px 8px;
    border-radius: 20px;
}

.tag.approved {
    background-color: var(--tag-color-one);
    color: var(--tag-color-text-one);
}

.tag.progress {
    background-color: var(--tag-color-two);
    color: var(--tag-color-text-two);
}

.tag.review {
    background-color: var(--tag-color-three);
    color: var(--tag-color-text-three);
}

.tag.waiting {
    background-color: var(--tag-color-four);
    color: var(--tag-color-text-four);
}

.upcoming {
    border-bottom: 1px solid #ddd;
    padding-bottom: 30px;
    margin-bottom: 30px;
}


#add-new {
    float: right;
    cursor: pointer;
}


.node {
    margin-left: 10px;
}

.node-self {
    padding: 4px 10px;
    font-size: 1.2em;
    display: inline-block;
    width: 99%;
    white-space: pre-wrap;
    /* css-3 */
    white-space: -moz-pre-wrap;
    /* Mozilla, since 1999 */
    white-space: -pre-wrap;
    /* Opera 4-6 */
    white-space: -o-pre-wrap;
    /* Opera 7 */
    word-wrap: break-word;
    /* Internet Explorer 5.5+ */
}

.node-children>.node {
    border-left: 1px solid #eee;
    padding: 0 5px;
}


.bullet {
    display: inline-block;
    width: 1%;
}

/* .bullet:before {
    font-family: "Material Design Icons";
    content: "\F012F";
    display: inline-block;
    padding-right: 3px;
    vertical-align: middle;
    font-size: .9em;
    color: #444;
}

.bullet-hover:before {
    font-family: "Material Design Icons";
    content: "\F0374";
    display: inline-block;
    padding-right: 3px;
    vertical-align: middle;
    font-size: .9em;
    color: #444;
} */

@media screen and (max-width: 900px) {
    .left-bar {
        display: none;
    }
}

@media screen and (max-width: 700px) {
    .list-manager {
        flex-direction: column;
        overflow-y: auto;
    }

    .right-bar,
    .page-content {
        width: 100%;
        display: block;
    }

    .tasks-wrapper {
        height: auto;
    }
}

@media screen and (max-width: 520px) {
    .page-content {
        padding: 40px 10px 0 10px;
    }

    .right-content {
        padding: 10px 16px;
    }

    .category {
        padding: 20px;
    }
}

